k8s/ordering-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ordering-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  spec:
    ingressClassName: alb
    rules:
    - http:
        paths:
        - path: /auth
          pathType: Prefix
          backend:
            service:
              name: auth
              port:
                number: 3001
        - path: /orders
          pathType: Prefix
          backend:
            service:
              name: orders
              port:
                number: 3000
        - path: /billing
          pathType: Prefix
          backend:
            service:
              name: billing
              port:
                number: 3002
